admin: update metadata files

--- a/README
+++ b/README
@@ -1,33 +1,37 @@
-= Cliable
+= Executable
 
-* http://death.rubyforge.org
-* http://death.rubyforge.org/cliable
+* http://rubyworks.github.com/executable
+* http://github.comd/rubyworks/executable
 
-== DESCRIPTION:
 
-The Cliable mixin is a very quick and and easy
+== DESCRIPTION
+
+The Executable mixin is a very quick and and easy
 way to make almost any class usable via a command
 line interface. It simply uses writer methods as
 option setters, and the first command line argument
 as the method to call, with the subsequent arguments
 passed to the method.
 
-== FEATURES/PROBLEMS:
+
+== FEATURES/PROBLEMS
 
 * Super easy to use --just mixin.
 * Uses public writters as CLI options.
 * And public methods as subcommands.
 
-== RELEASE/NOTES:
 
-Please see RELEASE file.
+== RELEASE NOTES
 
-== SYNOPSIS:
+Please see HISTORY file.
 
-Simply mixin Cliable, then call #execute_command.
+
+== SYNOPSIS
+
+Simply mixin Executable, then call #execute_command.
 
   class X
-    include Cliable
+    include Executable
     attr_accessor :quiet
     def bread(*args)
       ["BREAD", quiet, *args]
@@ -47,26 +51,15 @@ Simply mixin Cliable, then call #execute_command.
 
 See RDocs for more information.
 
-== INSTALL:
 
-  $ sudo gem install cliable
+== INSTALLATION:
 
-== LICENSE:
+  $ sudo gem install executable
 
-(LGPL v3 License)
 
-Copyright (c) 2009 Death_of_a_Programmer
+== LEGAL
 
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Lesser General Public License as published
-by the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
+(Apache 2.0)
 
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU Lesser General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
+Copyright (c) 2009 Thomas Sawyer
 
