--- a/README.rdoc
+++ b/README.rdoc
@@ -32,7 +32,7 @@ Please see HISTORY file.
 
 Simply mixin Executable, then call #execute_command.
 
-  class X
+  class Example
     include Executable
 
     attr_accessor :quiet
@@ -48,12 +48,12 @@ Simply mixin Executable, then call #execute_command.
     end
   end
 
-  x = X.new
+  example = Example.new
 
-  x.execute!("butter yum")
+  example.execute!("butter yum")
   => ["butter", nil, nil, "yum"]
 
-  x.execute!("bread --quiet --size=big")
+  example.execute!("bread --quiet --size=big")
   => ["bread", true, "big"]
 
 
@@ -64,9 +64,9 @@ To make the command available on the command line, add an executable
 to your project passing ARGV to the #execute! method.
 
   #!usr/bin/env ruby
-  require 'x'
-  x = X.new
-  x.execute!(ARGV)
+  require 'example'
+  example = Example.new
+  example.execute!(ARGV)
 
 
 == INSTALL
