--- a/demo/06_command_methods.rdoc
+++ b/demo/06_command_methods.rdoc
@@ -5,27 +5,31 @@ This is the example used in the documentation.
    class Example
      include Executable
 
-     attr_accessor :quiet
+     attr_switch :quiet
 
      def bread(*args)
-       ["bread", quiet, *args]
+       ["bread", quiet?, *args]
      end
 
      def butter(*args)
-       ["butter", quiet, *args]
+       ["butter", quiet?, *args]
+     end
+
+     # Route call to methods.
+     def call(name, *args)
+       send(name, *args)
      end
    end
 
 Use a subcommand and an argument.
 
-   x = Example.new
-   r = x.execute!("butter yum")
+   c, a = Example.parse(['butter', 'yum'])
+   r = c.call(*a)
    r.assert == ["butter", nil, "yum"]
-
 
 A subcommand and a boolean option.
 
-   x = Example.new
-   r = x.execute!("bread --quiet")
+   c, a = Example.parse(['bread', '--quiet'])
+   r = c.call(*a)
    r.assert == ["bread", true]
 
