Tweaking API and renamed Base class to Command.

--- a/demo/01_single_command.rdoc
+++ b/demo/01_single_command.rdoc
@@ -5,7 +5,7 @@ interface without subcommands.
 
   require 'executable'
 
-  class NoSubCommandCLI < Executable::Base
+  class NoSubCommandCLI < Executable::Command
 
     attr :result
 
