--- a/demo/05_optparse_example.rdoc
+++ b/demo/05_optparse_example.rdoc
@@ -6,7 +6,7 @@ This example mimics the one given in optparse.rb documentation.
     require 'ostruct'
     require 'time'
 
-    class ExampleCLI < Executable::Base
+    class ExampleCLI < Executable::Command
 
       CODES = %w[iso-2022-jp shift_jis euc-jp utf8 binary]
       CODE_ALIASES = { "jis" => "iso-2022-jp", "sjis" => "shift_jis" }
