--- a/README.rdoc
+++ b/README.rdoc
@@ -76,12 +76,12 @@ to your project passing ARGV to the #execute or #run methods.
 
     #!usr/bin/env ruby
     require 'hello.rb'
-    HelloCmd.run(ARGV)
+    HelloCmd.run
 
 If we named this file `hello`, set its execute flag and made it available
-via our systems $PATH, then:
+on our systems $PATH, then:
 
-    $ hello John
+    $ hello
     Hello, World!
 
     $ hello John
@@ -97,21 +97,23 @@ Executable can also generate help text for commands.
 
     Say hello.
 
-    --loud    Say it in uppercase?
-    --help    Show this message
+    --loud      Say it in uppercase?
+    --help      Show this message
 
 If you look back at the class definition you can see it's pulling
-comments from the source to provide descriptions. 
+comments from the source to provide descriptions. It pulls the 
+description the command itself from the `#call` method.
 
 Basic help like this is fine for personal tools, but for public facing
 production applications it is desirable to utilize manpages. To this end,
 Executable provides Markdown formatted help as well. We can access this,
-for example, via `HelloCmd.help.to_markdown`. The idea with this is that
+for example, via `HelloCmd.help.markdown`. The idea with this is that
 we can save the output to `man/hello.ronn` or copy it the top of our `bin/`
 file, edit it to prefection and then use tools such a {ronn}[https://github.com/rtomayko/ronn],
 {binman}[https://github.com/sunaku/binman] or {md2man}[https://github.com/sunaku/md2man]
 to generate the manpages. What's particularly cool about Executable,
-is that once we have a manpage, the `#show_help` will use it instead.
+is that once we have a manpage in the standard `man/` location in our project,
+the `#show_help` method will use it instead of the plain text.
 
 For a more detail example see {QED}[demo.html]
 and {API}[http://rubydoc.info/gems/executable/frames] documentaiton.
