--- a/demo/07_command_methods.rdoc
+++ b/demo/07_command_methods.rdoc
@@ -17,7 +17,8 @@ This is the example used in the documentation.
 
      # Route call to methods.
      def call(name, *args)
-       send(name, *args)
+       meth = public_method(name)
+       meth.call(*args)
      end
    end
 
