Spell check HISTORY. [admin]

--- a/HISTORY.rdoc
+++ b/HISTORY.rdoc
@@ -6,10 +6,10 @@ Version 1.2.0 is complete rewrite of Executable. Actually it was decided that
 the old design was too simplistic in it design concept, so another library
 that we had been working on, called Executioner and briefly CLI::Base, was
 ported over and with some API changes is now the new Executable project.
-The idea of the project is generally the same, but Executable now offeres
-more features, such a good help output, a more robust design and namespace-base
-subcomamnds. Of course to accomidate all this the API had to change some over
-the previous version, so be sure to read the API documention.
+The idea of the project is generally the same, but Executable now offers
+more features, such a good help output and and namespace-based subcomamnds.
+Of course to accommodate all this the API had to change some over
+the previous version, so be sure to read the API documentation.
 
 Changes:
 
@@ -17,15 +17,15 @@ Changes:
 * Port Executioner project over to become new Executable project.
 * Supports namespace-base subcommmands.
 * Supports formatted help output in plain text and markdown.
-* Supports manpage lookup and display.
+* Supports manpage look-up and display.
 
 
 == 1.1.0 / 2011-04-21
 
-This release simplifies Exectuable, removing the #option_missing method
+This release simplifies Executable, removing the #option_missing method
 and using the standard #method_missing callback instead. Along with this
 the special error class, +NoOptionError+, has been removed. This release
-also fixes an issue with inconsistant arguments being passed to the callback.
+also fixes an issue with inconsistent arguments being passed to the callback.
 Finally it renames the #execute_command method to simple #execute!.
 
 Changes:
@@ -37,7 +37,7 @@ Changes:
 * Deprecations
 
   * Rely on #method_missing callback instead of special #option_missing method.
-  * The +NoOptionError+ exceotion class is no longer needed because of above.
+  * The +NoOptionError+ exception class is no longer needed because of above.
 
 * Bug Fixes
 
